--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Davao Vision Colleges, Inc.</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
@@ -48,7 +47,8 @@
     .college-info h1 {
       font-size: 1.2rem;
       font-weight: 600;
-      color: #ffffff;
+	  color: #fff;
+	  margin-bottom: 0;
     }
 
     .college-info p {
@@ -125,6 +125,7 @@
   border-radius: 20px;
   margin-top: 20px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  
 }
 
 
@@ -664,7 +665,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Â© 2025 Davao Vision Colleges, Inc. | All Rights Reserved</p>
+    <p>© 2025 Davao Vision Colleges, Inc. | All Rights Reserved</p>
   </footer>
 
 </body>
